--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
 		<commons-io.version>2.4</commons-io.version>
 		<jodd.version>3.3.2</jodd.version>
 		<joda-time.version>2.1</joda-time.version>
-		<poi.version>3.9</poi.version>
+		<poi.version>3.9</poi.version> 
+		<xerces.version>2.11.0</xerces.version> 
 		<!-- log -->
 		<slf4j.version>1.6.6</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -258,6 +259,7 @@
 		</dependency>
 
 		<!-- Tools -->
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -291,7 +293,12 @@
 			<artifactId>joda-time</artifactId>
 			<version>${joda-time.version}</version>
 		</dependency>
-		<!-- GENERAL UTILS end -->
+
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId> 
+			<version>${xerces.version}</version>
+		</dependency>
 
 		<!-- TEST begin -->
 		<dependency>
@@ -331,13 +338,13 @@
 			<artifactId>weixin-java-tools</artifactId>
 			<version>1.0.2</version>
 		</dependency>
- 
+
 		<!--lt common -->
 		<dependency>
 			<groupId>com.lt</groupId>
 			<artifactId>lt.util</artifactId>
 			<version>1.0</version>
-		</dependency> 
+		</dependency>
 	</dependencies>
 
 	<build>
