--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
 		<commons-io.version>2.4</commons-io.version>
 		<jodd.version>3.3.2</jodd.version>
 		<joda-time.version>2.1</joda-time.version>
-		<poi.version>3.9</poi.version> 
-		<xerces.version>2.11.0</xerces.version> 
+		<poi.version>3.9</poi.version>
+		<xerces.version>2.11.0</xerces.version>
 		<!-- log -->
 		<slf4j.version>1.6.6</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -296,10 +296,15 @@
 
 		<dependency>
 			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId> 
+			<artifactId>xercesImpl</artifactId>
 			<version>${xerces.version}</version>
 		</dependency>
-
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.8.2</version>
+		</dependency>
 		<!-- TEST begin -->
 		<dependency>
 			<groupId>junit</groupId>
